# portable

./: .gitignore  Makefile  Makefile.internal  README.md  bench.inc  make.inc  release-portable.sh  stiles.map  sync-portable.sh
.github/workflows/: build.yml
bench/: Makefile  README.md  order_only.cpp  parallel_chol.cpp  run.sh  scotch_iso.cpp  smoke.py  speedtest.cpp
bench/mats/: diff.mtx
tools/: module.mk
tools/TileIndexer/: Makefile  MatrixIO.cpp  main.cpp  (+15 more)
tools/compute/: CMakeLists.txt  Makefile  chol_from_pattern.hpp  chol_sync_policy.hpp  compute_gpu.hpp  csc_solve.cpp  dags.hpp  debug_tiles.hpp  debugging.hpp  dlogdet.cpp  dpotrf.cpp  dpotri.cpp  dtrsm.cpp  improve_gpu  memory_for_compute.hpp  pdpotrf (Copy).cpp  pdpotrf.cpp  pdpotrf.cpp.pre_surplusfix_bak  pdpotrf_history.hpp  pdpotrf_improved_output.hpp  pdpotrfsparse.cpp  pdtrsm.cpp  pdtrtri.cpp  pdtrtri_history.hpp  semisparsepdpotrf.cpp  sparse_dlogdet.cpp  sparse_dpotrf.cpp  sparse_dpotri.cpp  sparse_dtrsm.cpp  stiles_compute.hpp  stiles_compute_debugging.hpp  stiles_mkl_mpi_stub.c  stiles_xsmm.hpp  stiles_xsmm_intel_stubs.c  tile_compare.hpp
tools/compute/memory/: pdpotrf_paths.md
tools/control/: CMakeLists.txt  Makefile  allocate.cpp  allocate.h  auxiliary.h  auxiliarydasdad.cpp  common.h  context.cpp  context.h  control.cpp  control.h  new_context.cpp  new_context.hpp  new_global.hpp  stiles_control.hpp  stiles_dispatch.h  stiles_omp_utils.h  stiles_pcompute.h  stiles_threadsetting.cpp  stiles_threadsetting.h  stilesos-hwloc.cpp  stilesos.cpp  stileswinthread.cpp  stileswinthread.h  tile.h
(+233 files in other folders)
